# vote

./: .env.template  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/ch_migrations/: 017_rename_tender_to_proposal.sql  018_reactions_and_wallet_links.sql  019_proposal_short_id.sql
backend/src/backend/: app.py  auth.py  ch.py  lang_detect.py  models.py  notifications.py  og.py  router.py  settings.py  telegram_webhook.py  translation_queue.py
backend/src/backend/governance/: cache.py  client.py  models.py  poller.py  router.py
backend/src/backend/notifier/: __main__.py  email_client.py  telegram_client.py  worker.py
backend/src/backend/scripts/: backfill_source_lang.py
backend/src/backend/translator/: __main__.py  gemini_client.py  prompts.py  worker.py
clickhouse/config.d/: listen.xml  memory.xml  system_logs_ttl.xml
contract/: .gitignore  Cargo.toml
contract-link/: Cargo.toml
contract-link/artifacts/: checksums.txt  gonka_wallet_link.wasm
contract-link/scripts/: build.sh  deploy.sh
contract-link/src/: error.rs  lib.rs  msg.rs  state.rs
contract/scripts/: build.sh
contract/src/: error.rs  lib.rs  msg.rs  state.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Avatar.tsx  CommentNode.tsx  Comments.tsx  Countdown.tsx  ExpandableMarkdown.tsx  Footer.tsx  Header.tsx  HowToVote.tsx  LanguageSwitcher.tsx  LinkedWallets.tsx  LoginModal.tsx  ProposalReactionButtons.tsx  ReactionStats.tsx  ReactorsPopover.tsx  TallyStats.tsx  TranslatedText.tsx  WalletConnectModal.tsx
indexer/: Dockerfile  go.mod  go.sum  main.go
scripts/: ch-drop-old-partitions.sh
(+33 files in other folders)
