[package]
name = "gonka-tenders"
version = "0.1.0"
authors = ["Gonka community"]
edition = "2021"
license = "Apache-2.0"
description = "Minimal CosmWasm vote ledger for Gonka Vote"

exclude = ["artifacts/*", "schema/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-schema  = "2.1"
cosmwasm-std     = { version = "2.1", features = ["cosmwasm_2_0"] }
cw-storage-plus  = "2.0"
cw2              = "2.0"
schemars         = "0.8"
serde            = { version = "1.0", default-features = false, features = ["derive"] }
thiserror        = "1.0"

[dev-dependencies]
cw-multi-test = "2.1"
